--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,16 @@
 <resources>
-    <string name="app_name">AntouchClient</string>
-    <string name="SearchBtn">Поиск</string>
-    <string name="SearchInstr">Как только приставка будет включена\nнажмите кнопку \"Поиск\" ниже</string>
-    <string name="WaitStr">Пожалуйста подождите</string>
-    <string name="NetError">Ошибка подключения!\nПроверьте подключение приставки к (не вышкинскому)интернету</string>
+    <string name="app_name" translatable="false">AntouchClient</string>
+    <string name="SearchBtn">Searching</string>
+    <string name="SearchInstr">Press search as soon as TX-box is turned on</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="tab_one">Тачпад</string>
-    <string name="tab_two">Дополнительно</string>
-    <string name="searching_for_set_top_box">Поиск приставки</string>
-    <string name="please_wait">Пожалуйста подождите</string>
-    <string name="error">Ошибка</string>
-    <string name="connection_error">Ошибка подключения</string>
-    <string name="close">Закрыть</string>
+    <string name="tab_one">Touchpad</string>
+    <string name="tab_two">Others</string>
+    <string name="searching_for_set_top_box">Searching for TX-box</string>
+    <string name="please_wait">Please wait</string>
+    <string name="error">Error occurred</string>
+    <string name="connection_error">Connection Error</string>
+    <string name="close">Close</string>
+    <string name="text_input">Text input</string>
+    <string name="send">Send</string>
+    <string name="cancel">Cancel</string>
 </resources>
